<resources>
    <string name="app_name">MyMovieList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    url nya pake urlnya masing masing ya :3-->
    <!--    <string name="url">http://???.???.???.?/myservice/master2.php</string>-->

    <!--    punya steven-->
<!--    <string name="url">http://10.0.2.2/projectMDP/master2.php</string>-->
    <string name="url_user">http://10.0.2.2/projectMDP/UserController.php</string>
    <string name="url_favorite">http://10.0.2.2/projectMDP/UserFavorite.php</string>
    <string name="url_comment">http://10.0.2.2/projectMDP/UserComment.php</string>

    <!--    punya yen-->
    <!--    <string name="url">http://192.168.1.8/projectMDP/master2.php</string>-->

    <!--    punya kevin-->
<!--    <string name="url">http://192.168.151.3/projectMDP/master2.php</string>-->
<!--    <string name="url_user">http://192.168.151.3/projectMDP/UserController.php</string>-->
<!--    <string name="url_favorite">http://192.168.151.3/projectMDP/UserFavorite.php</string>-->
<!--    <string name="url_comment">http://192.168.151.3/projectMDP/UserComment.php</string>-->

    <!--    punya patrick-->
    <string name="url">http://192.168.100.8/myservice/master2.php</string>

    <!--    API TMDB-->
    <string name="API_KEY">823dc6be5872a374c031c6e4773a2369</string>
    <string name="url_popular_now">https://api.themoviedb.org/3/movie/popular?api_key=</string>
    <string name="url_poster">https://image.tmdb.org/t/p/w500</string>
    <string name="url_movie_detail">https://api.themoviedb.org/3/movie/</string>
    <string name="url_search_movie">https://api.themoviedb.org/3/search/movie?api_key=</string>


    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="home">Home</string>
    <string name="watch_list">Watch List</string>
    <string name="favorite">Favorite</string>
    <string name="rating">Rating</string>
    <string name="popular_now">Popular Now</string>
    <string name="load_more">Load More</string>
    <string name="addressing">Powered by TMDB API</string>

    <string name="add_comment">Add Comment</string>
    <string name="search">Search</string>


</resources>