<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/home" />
    <item
        android:id="@+id/navWatchlist"
        android:icon="@drawable/ic_list_bulleted"
        app:showAsAction="always"
        android:title="@string/watch_list" />
    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/navFavorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"
        android:title="@string/favorite" />
    <item
        android:id="@+id/navRating"
        android:icon="@drawable/ic_star"
        app:showAsAction="always"
        android:title="@string/rating" />

</menu>